2005-01-05  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c : Enabled offline support
	* addressbook/e-book-backend-gal.c : Similar
	* calendar/e-cal-backend-exchange-tasks.c : Similar
	* storage/exchange-account.c : Similar
	* storage/exchange-component.c : Similar
	* storage/exchange-component.h : Similar
	* storage/exchange-offline-listener.c : Similar
	* storage/main.c : Similar
	* calendar/e-cal-backend-exchange-calendar.c : Similar. Also fixed 
	some memory leaks
	* calendar/e-cal-backend-exchange.c : Offline and memory leak fixes.

2004-12-21  Sarfraaz Ahned <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c: Added offline error handling
	changes.
	* addressbook/e-book-backend-gal.c : Similar
	* calendar/e-cal-backend-exchange.c (e_cal_backend_exchange_add_object):
	The cache now checks for duplicate detatched instances before adding
        them. This fixes #70414
	(discard_detached_instance): Small leak fixed.
	* storage/e-folder-exchange.c : Added error checks
	* storage/exchange-folder-size.c : Object freeing code added.

2004-12-21  JP Rosevear  <jpr@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c: update for
	remove/modify api changes

	* calendar/e-cal-backend-exchange-tasks.c: ditto

	* calendar/e-cal-backend-exchange.c: ditto	
	
2004-12-20  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.2
	* NEWS : Updated

2004-12-20  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Now checking for camel-provider

2004-12-16  Sushma Rai <rsushma@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c : Fixed some memory leaks. 
	* calendar/e-cal-backend-exchange.c: ditto
	* storage/exchange-hierarchy-foreign.c: ditto
	* storage/exchange-hierarchy-webdav.c: ditto

2004-12-15  Rodrigo Moya <rodrigo@novell.com>

	* addressbook/e-book-backend-exchange.c: use libedataserver's e-sexp.h.

	* calendar/e-cal-backend-exchange.c (receive_objects, book_resource):