@@ -9,7 +9,6 @@ INCLUDES = 						\
 	-DEVOLUTION_IMAGESDIR=\""$(EVOLUTION_imagesdir)"\"
 
 libfoldertree_a_SOURCES =				\
-	$(IDL_GENERATED)				\
 	$(MARSHAL_GENERATED)				\
 	e-folder.c					\
 	e-folder.h					\
@@ -47,22 +46,6 @@ MARSHAL_GENERATED = e-shell-marshal.c e-shell-marshal.h
 BUILT_SOURCES = $(MARSHAL_GENERATED)
 CLEANFILES = $(MARSHAL_GENERATED)
 NODIST_FILES = $(MARSHAL_GENERATED)
-
-IDLS = $(EVOLUTION_idldir)/Evolution-Addressbook-SelectNames.idl
-
-IDL_GENERATED =                 			\
-	Evolution-Addressbook-SelectNames.h		\
-	Evolution-Addressbook-SelectNames-common.c	\
-	Evolution-Addressbook-SelectNames-skels.c	\
-	Evolution-Addressbook-SelectNames-stubs.c
-
-$(IDL_GENERATED): $(IDLS)
-	$(ORBIT_IDL) $(EVOLUTION_IDL_INCLUDES) \
-                $(EVOLUTION_idldir)/Evolution-Addressbook-SelectNames.idl
-
-BUILT_SOURCES += $(IDL_GENERATED)
-NODIST_FILES += $(IDL_GENERATED)
-CLEANFILES += $(IDL_GENERATED)
 
 etspecdir=$(CONNECTOR_DATADIR)/etspec
 etspec_DATA = e-storage-set-view.etspec
